--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
         </activity>
         <activity android:name=".ListDeviceActivity" />
         <activity android:name=".AddDeviceActivity" />
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".PinAccessActivity" />
+        <activity android:name=".CommandActivity" />
+        <activity android:name=".ShareActivity" />
+        <activity android:name=".HistoryActivity"></activity>
     </application>
 
 </manifest>
